# snad

./: Cargo.toml
example_rulesets/: ants.json  corner_finder.json  fire.json  maze.json  rule_110.json  sand_stress_test.json  sparks.json  wiper.json
petri/: Cargo.toml
petri/src/: lib.rs
uscope/: Cargo.toml
uscope/src/: main.rs
