[package]
name = "uscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petri = { path = "../petri" }
eframe = "0.27"
egui = { version = "*", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.200"
serde_json = "1.0.116"
native-dialog = "0.6.4"
